[gd_scene load_steps=10 format=3 uid="uid://cfsxn0iyywxs5"]

[ext_resource type="Script" path="res://Scripts/level.gd" id="1_stx43"]
[ext_resource type="PackedScene" uid="uid://dv0x4vv0fkbd2" path="res://Scenes/Ocean/ocean.tscn" id="2_lnmp3"]
[ext_resource type="PackedScene" uid="uid://co8iy1he6fkwa" path="res://Scenes/hud.tscn" id="3_nmge5"]
[ext_resource type="PackedScene" uid="uid://ptto4146phwg" path="res://Scenes/boat.tscn" id="4_64cm4"]
[ext_resource type="PackedScene" uid="uid://djyibeaauqw2f" path="res://Scenes/crew_member.tscn" id="5_pjrgm"]
[ext_resource type="PackedScene" uid="uid://je3j0pd8ickv" path="res://Scenes/splish.tscn" id="6_peku6"]
[ext_resource type="Script" path="res://Scenes/game_camera.gd" id="7_r4a8d"]
[ext_resource type="PackedScene" uid="uid://cb85ltydhxs13" path="res://Scenes/dock.tscn" id="8_b63j4"]
[ext_resource type="PackedScene" uid="uid://qotgv1kx4jwd" path="res://Scenes/rat_hole.tscn" id="8_mfs7h"]

[node name="Level" type="Node" node_paths=PackedStringArray("boat")]
script = ExtResource("1_stx43")
minimum_seconds = 30
boat = NodePath("Boat")

[node name="Ocean" parent="." instance=ExtResource("2_lnmp3")]

[node name="HUD" parent="." instance=ExtResource("3_nmge5")]

[node name="Boat" parent="." instance=ExtResource("4_64cm4")]
position = Vector2(320, 180)

[node name="People" type="Node2D" parent="."]
z_index = 1
y_sort_enabled = true

[node name="CrewMember" parent="People" instance=ExtResource("5_pjrgm")]
position = Vector2(380, 47)

[node name="CrewMember2" parent="People" instance=ExtResource("5_pjrgm")]
position = Vector2(297, 28)

[node name="CrewMember3" parent="People" instance=ExtResource("5_pjrgm")]
position = Vector2(342, 27)

[node name="CrewMember4" parent="People" instance=ExtResource("5_pjrgm")]
position = Vector2(269, 47)

[node name="Splish" parent="People" instance=ExtResource("6_peku6")]
position = Vector2(320, 201)

[node name="GameCamera" type="Camera2D" parent="People" node_paths=PackedStringArray("focus_target")]
position = Vector2(320, 180)
script = ExtResource("7_r4a8d")
focus_target = NodePath("../Splish")

[node name="Obstacles" type="Node" parent="."]

[node name="RatHole" parent="Obstacles" instance=ExtResource("8_mfs7h")]
position = Vector2(320, 10)

[node name="LeakSpawnTimer" type="Timer" parent="Obstacles"]
wait_time = 5.0
autostart = true

[node name="StartDock" parent="." node_paths=PackedStringArray("boat") instance=ExtResource("8_b63j4")]
position = Vector2(640, 180)
boat = NodePath("../Boat")

[connection signal="completed" from="." to="." method="_on_completed"]
[connection signal="set_up" from="Boat" to="." method="_on_boat_ready"]
[connection signal="timeout" from="Obstacles/LeakSpawnTimer" to="." method="_on_leak_spawn_timer_timeout"]
